fix long event titles are cut off in the event calendar close #9

--- a/sites/all/themes/bwhf/sass/pages/_events.scss
+++ b/sites/all/themes/bwhf/sass/pages/_events.scss
@@ -243,6 +243,10 @@
   {
     display: none;
   }
+  .fc-day-grid-event .fc-content
+  {
+    white-space: normal;
+  }
 }
 
 .page-events .page-title
